# pi0-action-expert-analysis

./: .gitignore  README.md  pyproject.toml
ablations/: aggregate_results.py  cross_embodiment.py  expert_variants.py  run_ablation.py
ablations/configs/: a1_expert_scale.yaml  a2_lora_rank.yaml  a3_lora_position.yaml  a4_flow_steps.yaml  a5_action_horizon.yaml  a6_freeze_filter.yaml  a7_model_variant.yaml
analysis/: attention_analysis.py  extract_activations.py  flow_matching_analysis.py  lora_comparison.py  representation_similarity.py  run_analysis.py
configs/: eval_libero.yaml  serving.yaml
docs/: experiment_log.md
eval_harness/: run_eval.py
finetune/: compute_norm_stats.py  convert_to_lerobot.py  train.py
finetune/configs/: lora_variants.yaml
pipeline/: dashboard.py  run_experiment.py
profiling/: inference_optimizer.py  latency_profile.py
results/: dashboard.html  job_registry.json
scripts/: submit_eval.sbatch  submit_pipeline.sbatch  submit_serving.sbatch  submit_train.sbatch  submit_train_multigpu.sbatch
serving/: checkpoint_cache.py  launch_policy_server.py
sim/: libero_runner.py  obs_adapter.py  rollout_video.py
smoke_tests/: test_inference.py  test_preprocessing.py
transforms/: README.md  droid_io.py  libero_io.py
